{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 12,
  "lineage": "b8a6c6ed-9f53-95b2-a10e-745d75ae3216",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.238.115.64",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-03-18T15:59:14.255-07:00",
            "id": "projects/aliproj001/regions/us-central1/addresses/k8s-address",
            "name": "k8s-address",
            "network_tier": "PREMIUM",
            "project": "aliproj001",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/aliproj001/regions/us-central1/addresses/k8s-address"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "external",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "6443"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2021-03-18T15:59:24.595-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/aliproj001/global/firewalls/k8s-cluster-firewall-external",
            "log_config": [],
            "name": "k8s-cluster-firewall-external",
            "network": "https://www.googleapis.com/compute/v1/projects/aliproj001/global/networks/k8s-cluster-vpc-1",
            "priority": 1000,
            "project": "aliproj001",
            "self_link": "https://www.googleapis.com/compute/v1/projects/aliproj001/global/firewalls/k8s-cluster-firewall-external",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2021-03-18T16:04:31.158-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/aliproj001/global/firewalls/k8s-cluster-firewall-internal",
            "log_config": [],
            "name": "k8s-cluster-firewall-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/aliproj001/global/networks/k8s-cluster-vpc-1",
            "priority": 1000,
            "project": "aliproj001",
            "self_link": "https://www.googleapis.com/compute/v1/projects/aliproj001/global/firewalls/k8s-cluster-firewall-internal",
            "source_ranges": [
              "10.200.0.0/16",
              "10.240.0.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "control-plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20210315a",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/aliproj001/zones/us-central1-c/disks/master-0"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/aliproj001/zones/us-central1-c/instances/master-0",
            "instance_id": "9010073020563088822",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata": {
              "sshKeys": "root:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQC+YdtOEAA/rPncYoTf0oGOuvYrhLZ6Tot0ysuDgX64dMXw4znMkWovq1i1iDhbs2wj3FxoJHL1EV2sEPmJ+N5HEIPYScdiOoM4MwrTkWcBAk2hrtntS6pINNKabDWBwgRQLdgxSloES7hUeGwXcuAeFCSpAtp3IHTeJ1kk8x4BA4kbD1Oix2PgReGbBRaW2ipR+sr5MhwqnvWgQ3OHfwcdUM899jW7LVcDXa3JfAIa8W9Msznw+l3kOTrs7gVRsOiLFiGdvpqycaBex6MXrYPkeacYCeV8dBs4hbvyxidy9neqGkMPZrxm3GYRT0L7fvWyK3UVkcI2BYZvr4lPPoSvmB9k0IcnwX1G+PyuT5mmPgoSGCENKn4KhYrzkgQ2Xe/8uy5tXL/m1xK8vl/a2dK3HDn9lSsoqUZjxef52HYpoH/Qz [...]
            },
            "metadata_fingerprint": "rkBfstlg1_k=",
            "metadata_startup_script": "apt-get install -y python",
            "name": "master-0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.193.91.102",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/aliproj001/global/networks/k8s-cluster-vpc-1",
                "network_ip": "10.240.0.10",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/aliproj001/regions/us-central1/subnetworks/k8s-subnet",
                "subnetwork_project": "aliproj001"
              }
            ],
            "project": "aliproj001",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/aliproj001/zones/us-central1-c/instances/master-0",
            "service_account": [
              {
                "email": "415466585922-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "cluster1",
              "controller",
              "kubernetes",
              "master"
            ],
            "tags_fingerprint": "x35bW_IANwo=",
            "zone": "us-central1-c"
          },
          "dependencies": [
            "google_compute_network.default",
            "google_compute_subnetwork.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20210315a",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/aliproj001/zones/us-central1-c/disks/master-1"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/aliproj001/zones/us-central1-c/instances/master-1",
            "instance_id": "3953865686660310454",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata": {
              "sshKeys": "root:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQC+YdtOEAA/rPncYoTf0oGOuvYrhLZ6Tot0ysuDgX64dMXw4znMkWovq1i1iDhbs2wj3FxoJHL1EV2sEPmJ+N5HEIPYScdiOoM4MwrTkWcBAk2hrtntS6pINNKabDWBwgRQLdgxSloES7hUeGwXcuAeFCSpAtp3IHTeJ1kk8x4BA4kbD1Oix2PgReGbBRaW2ipR+sr5MhwqnvWgQ3OHfwcdUM899jW7LVcDXa3JfAIa8W9Msznw+l3kOTrs7gVRsOiLFiGdvpqycaBex6MXrYPkeacYCeV8dBs4hbvyxidy9neqGkMPZrxm3GYRT0L7fvWyK3UVkcI2BYZvr4lPPoSvmB9k0IcnwX1G+PyuT5mmPgoSGCENKn4KhYrzkgQ2Xe/8uy5tXL/m1xK8vl/a2dK3HDn9lSsoqUZjxef52HYpoH/Qz [...]
            },
            "metadata_fingerprint": "rkBfstlg1_k=",
            "metadata_startup_script": "apt-get install -y python",
            "name": "master-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "104.154.95.130",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/aliproj001/global/networks/k8s-cluster-vpc-1",
                "network_ip": "10.240.0.11",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/aliproj001/regions/us-central1/subnetworks/k8s-subnet",
                "subnetwork_project": "aliproj001"
              }
            ],
            "project": "aliproj001",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/aliproj001/zones/us-central1-c/instances/master-1",
            "service_account": [
              {
                "email": "415466585922-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "cluster1",
              "controller",
              "kubernetes",
              "master"
            ],
            "tags_fingerprint": "x35bW_IANwo=",
            "zone": "us-central1-c"
          },
          "dependencies": [
            "google_compute_network.default",
            "google_compute_subnetwork.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20210315a",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/aliproj001/zones/us-central1-c/disks/worker-0"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/aliproj001/zones/us-central1-c/instances/worker-0",
            "instance_id": "3995737133850453429",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata": {
              "sshKeys": "root:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQC+YdtOEAA/rPncYoTf0oGOuvYrhLZ6Tot0ysuDgX64dMXw4znMkWovq1i1iDhbs2wj3FxoJHL1EV2sEPmJ+N5HEIPYScdiOoM4MwrTkWcBAk2hrtntS6pINNKabDWBwgRQLdgxSloES7hUeGwXcuAeFCSpAtp3IHTeJ1kk8x4BA4kbD1Oix2PgReGbBRaW2ipR+sr5MhwqnvWgQ3OHfwcdUM899jW7LVcDXa3JfAIa8W9Msznw+l3kOTrs7gVRsOiLFiGdvpqycaBex6MXrYPkeacYCeV8dBs4hbvyxidy9neqGkMPZrxm3GYRT0L7fvWyK3UVkcI2BYZvr4lPPoSvmB9k0IcnwX1G+PyuT5mmPgoSGCENKn4KhYrzkgQ2Xe/8uy5tXL/m1xK8vl/a2dK3HDn9lSsoqUZjxef52HYpoH/Qz [...]
            },
            "metadata_fingerprint": "rkBfstlg1_k=",
            "metadata_startup_script": "apt-get install -y python",
            "name": "worker-0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.184.171.105",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/aliproj001/global/networks/k8s-cluster-vpc-1",
                "network_ip": "10.240.0.20",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/aliproj001/regions/us-central1/subnetworks/k8s-subnet",
                "subnetwork_project": "aliproj001"
              }
            ],
            "project": "aliproj001",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/aliproj001/zones/us-central1-c/instances/worker-0",
            "service_account": [
              {
                "email": "415466585922-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "cluster1",
              "kubernetes",
              "worker"
            ],
            "tags_fingerprint": "FD9PNFQQxps=",
            "zone": "us-central1-c"
          },
          "dependencies": [
            "google_compute_network.default",
            "google_compute_subnetwork.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20210315a",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/aliproj001/zones/us-central1-c/disks/worker-2"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/aliproj001/zones/us-central1-c/instances/worker-2",
            "instance_id": "891471292132124086",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata": {
              "sshKeys": "root:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQC+YdtOEAA/rPncYoTf0oGOuvYrhLZ6Tot0ysuDgX64dMXw4znMkWovq1i1iDhbs2wj3FxoJHL1EV2sEPmJ+N5HEIPYScdiOoM4MwrTkWcBAk2hrtntS6pINNKabDWBwgRQLdgxSloES7hUeGwXcuAeFCSpAtp3IHTeJ1kk8x4BA4kbD1Oix2PgReGbBRaW2ipR+sr5MhwqnvWgQ3OHfwcdUM899jW7LVcDXa3JfAIa8W9Msznw+l3kOTrs7gVRsOiLFiGdvpqycaBex6MXrYPkeacYCeV8dBs4hbvyxidy9neqGkMPZrxm3GYRT0L7fvWyK3UVkcI2BYZvr4lPPoSvmB9k0IcnwX1G+PyuT5mmPgoSGCENKn4KhYrzkgQ2Xe/8uy5tXL/m1xK8vl/a2dK3HDn9lSsoqUZjxef52HYpoH/Qz [...]
            },
            "metadata_fingerprint": "rkBfstlg1_k=",
            "metadata_startup_script": "apt-get install -y python",
            "name": "worker-2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.122.68.139",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/aliproj001/global/networks/k8s-cluster-vpc-1",
                "network_ip": "10.240.0.22",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/aliproj001/regions/us-central1/subnetworks/k8s-subnet",
                "subnetwork_project": "aliproj001"
              }
            ],
            "project": "aliproj001",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/aliproj001/zones/us-central1-c/instances/worker-2",
            "service_account": [
              {
                "email": "415466585922-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "cluster1",
              "kubernetes",
              "worker"
            ],
            "tags_fingerprint": "FD9PNFQQxps=",
            "zone": "us-central1-c"
          },
          "dependencies": [
            "google_compute_network.default",
            "google_compute_subnetwork.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/aliproj001/global/networks/k8s-cluster-vpc-1",
            "mtu": 0,
            "name": "k8s-cluster-vpc-1",
            "project": "aliproj001",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/aliproj001/global/networks/k8s-cluster-vpc-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-03-18T15:59:25.803-07:00",
            "gateway_address": "10.240.0.1",
            "id": "projects/aliproj001/regions/us-central1/subnetworks/k8s-subnet",
            "ip_cidr_range": "10.240.0.0/24",
            "name": "k8s-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/aliproj001/global/networks/k8s-cluster-vpc-1",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "aliproj001",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/aliproj001/regions/us-central1/subnetworks/k8s-subnet"
          },
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    }
  ]
}